--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #38df8b;
+    background-color: #6EE7B7;
   }
   
   body {
